# cargo-save

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  impl.md  install.bat  install.sh
.github/workflows/: ci.yml  release.yml
debian/: cargo-save.deb
debian/cargo-save/DEBIAN/: control
docs/: README.md  architecture.md  cache-system.md  ci-integration.md  git-integration.md  tool-integration.md
examples/: basic.rs  ci_integration.rs  custom_build_tool.rs  git_integration.rs  sccache_integration.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs
