[package]
name = "cargo-save"
version = "0.2.0"
edition = "2021"
description = "Smart caching cargo wrapper with git-based incremental builds"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "cargo-save"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
tokio-process = "0.2"
walkdir = "2.5"
flate2 = "1.0"
tar = "0.4"
cargo_metadata = "0.18"
tempfile = "3.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
blake3 = "1.5"
rayon = "1.8"

[dev-dependencies]
tempfile = "3.0"
