[package]
name = "cargo-save"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"
description = "Smart caching cargo wrapper with git-based incremental builds"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HautlyS/cargo-save"
homepage = "https://github.com/HautlyS/cargo-save"
documentation = "https://docs.rs/cargo-save"
readme = "README.md"
authors = ["HautlyS <hautlythird@gmail.com>"]
keywords = ["cargo", "cache", "build", "incremental", "git", "workspace", "performance"]
categories = ["development-tools::cargo-plugins", "development-tools::build-utils"]
include = [
    "/src/",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/CHANGELOG.md",
    "/examples/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-save]
minimum-rust-version = "1.70.0"

[[bin]]
name = "cargo-save"
path = "src/main.rs"

[lib]
name = "cargo_save"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
walkdir = "2.5"
cargo_metadata = "0.18"
anyhow = "1.0"
blake3 = "1.5"
rayon = "1.8"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs]
rustdoc-args = ["--cfg", "docsrs"]
